--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_es_ES.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_es_ES.properties
@@ -1,112 +1,157 @@
 # General
-GENERAL_ERROR_LIST_HEADER = El archivo enviado tuvo problemas. Por favor, revise la lista de errores:
-GENERAL_UNEXPECTED_ERROR =   Ocurrieron errores mientras se ejecutaba la acci\u00f3n
-GENERAL_REDIRECT_FAILED = Errores al redireccionar
+GENERAL_ERROR_LIST_HEADER = El env\u00edo del formulario no fue exitoso. Revise y corrija los errores listados:
+GENERAL_UNEXPECTED_ERROR = Se han producido errores inesperados al ejecutar la acci\u00f3n solicitada
+GENERAL_REDIRECT_FAILED = Fall\u00f3 la redirecci\u00f3n
+GENERAL_INSUFFICIENT_RIGHTS = No tienes derechos para acceder a esta p\u00e1gina
+GENERAL_NO_ACCESS_TO_SERVER = No tienes derechos para acceder al servidor
+GENERAL_NO_ACCESS_TO_PROJECTS = No tienes acceso a ninguno de los proyectos
 
 # Login errors
 LOGIN_USERNAME_REQUIRED = Proporcione el nombre de usuario
 LOGIN_PASSWORD_REQUIRED = Proporcione la contrase\u00f1a
-LOGIN_FAILED = Fallo el inicio de sesi\u00f3n
-LOGIN_LOGOUT_FAILED = Fallo el cierre de sesi\u00f3n
-LOGIN_ACCOUNT_BLOCKED = Su cuenta no esta activa. Si acaba de registrarse, debe primero activar su cuenta.
+LOGIN_FAILED = Fall\u00f3 el inicio de sesi\u00f3n
+LOGIN_LOGOUT_FAILED = Fall\u00f3 el cierre de sesi\u00f3n
+LOGIN_ACCOUNT_BLOCKED = Tu cuenta no est\u00e1 activa. Si acabas de registrarte, necesitas activarla primero.
+PROJECT_REQUIRED = Seleccione el proyecto
 
 # User registration errors
-USER_REGISTRATION_PASSWORD_CONFIRMATION_REQUIRED = Proporcione la confirmaci\u00f3n de la clave
-USER_REGISTRATION_WRONG_CAPTCHA = El valor del c\u00f3digo no coincide con el valor en la imagen 
-USER_REGISTRATION_CAPTCHA_REQUIRED = Coloque el valor que aparece en la imagen
+USER_REGISTRATION_PASSWORD_CONFIRMATION_REQUIRED = Proporcione la confirmaci\u00f3n de la contrase\u00f1a
+USER_REGISTRATION_WRONG_CAPTCHA = El valor de captcha ingresado no coincide con la imagen
+USER_REGISTRATION_CAPTCHA_REQUIRED = Proporcione el valor de captcha
 USER_REGISTRATION_FIRSTNAME_REQUIRED = Proporcione el nombre
-USER_REGISTRATION_LASTNAME_REQUIRED = Proporcione el apellidop
-USER_REGISTRATION_EMAIL_REQUIRED = Proporcione el correo
-USER_REGISTRATION_MOBILE_REQUIRED = Proporcione el n\u00famero de celular
-USER_REGISTRATION_USERNAME_LENGTH = La longitud del nombre de usuario debe estar entre 3-20 caracteres
-USER_REGISTRATION_BAD_EMAIL = La direcci\u00f3n de correo electr\u00f3nico tiene un formato incorrecto
-USER_REGISTRATION_BAD_MOBILE = El n\u00famero de celular tiene un formato incorrecto.
+USER_REGISTRATION_LASTNAME_REQUIRED = Proporcione el apellido
+USER_REGISTRATION_EMAIL_REQUIRED = Proporcione el correo electr\u00f3nico
+USER_REGISTRATION_MOBILE_REQUIRED = Proporcione el n\u00famero de tel\u00e9fono m\u00f3vil
+USER_REGISTRATION_USERNAME_LENGTH = La longitud del nombre de usuario debe estar entre 3 y 20 caracteres
+USER_REGISTRATION_BAD_EMAIL = La direcci\u00f3n de correo electr\u00f3nico proporcionada tiene un formato incorrecto
+USER_REGISTRATION_BAD_MOBILE = El n\u00famero de tel\u00e9fono m\u00f3vil proporcionado tiene un formato incorrecto
 USER_REGISTRATION_PASSWORDS_MISMATCH = La contrase\u00f1a y la confirmaci\u00f3n de la contrase\u00f1a no coinciden
-USER_REGISTRATION_USER_EXISTS = El nombre de usuario ya existe
-USER_REGISTRATION_EMAIL_EXISTS = La direcci\u00f3n de correo electr\u00f3nico ya existe
+USER_REGISTRATION_USER_EXISTS = El nombre de usuario proporcionado ya existe
+USER_REGISTRATION_EMAIL_EXISTS = La direcci\u00f3n de correo electr\u00f3nico proporcionada ya existe
 
 # User activation errors
 USER_ACTIVATION_CODE_REQUIRED = Proporcione el c\u00f3digo de activaci\u00f3n
-USER_ACTIVATION_BAD_CODE = El c\u00f3digo de activaci\u00f3n no coincide con el nombre del usuario
-USER_ACTIVATION_ACTIVATION_FAILED = La activaci\u00f3n fall\u00f3. Por favor, revise el c\u00f3digo de activaci\u00f3n o/y el nombre de usuario.
+USER_ACTIVATION_BAD_CODE = El c\u00f3digo de activaci\u00f3n proporcionado no coincide con el nombre de usuario proporcionado
+USER_ACTIVATION_ACTIVATION_FAILED = Fall\u00f3 la activaci\u00f3n. Por favor, verifique el c\u00f3digo de activaci\u00f3n y/o el nombre de usuario.
 
 # Profile page
-PROFILE_CURRENT_PASSWORD_REQUIRED = Proporcione la contrase\u00f1a.
-PROFILE_NEW_PASSWORD_REQUIRED = Proporcione una nueva contrase\u00f1a.
-PROFILE_BAD_OLD_PASSWORD = La contrase\u00f1a es incorrecta.
-PROFILE_FAILED_CHANGE_PASSWORD = Fallo el cambio de contrase\u00f1a.
+PROFILE_CURRENT_PASSWORD_REQUIRED = Proporcione la contrase\u00f1a actual
+PROFILE_NEW_PASSWORD_REQUIRED = Proporcione una nueva contrase\u00f1a
+PROFILE_BAD_OLD_PASSWORD = La contrase\u00f1a actual es incorrecta.
+PROFILE_FAILED_CHANGE_PASSWORD = Fall\u00f3 el cambio de contrase\u00f1a.
 
 # Claim
-CLAIM_FAILED_TO_DELETE = Error al eliminar la reclamaci\u00f3n
-CLAIM_FAILED_TO_ASSIGN = Error al asignar la reclamaci\u00f3n
-CLAIM_FAILED_TO_UNASSIGN = Error al eliminar la reclamaci\u00f3n
-CLAIM_FAILED_TO_REJECT = Error al rechazar la reclamaci\u00f3n
-CLAIM_FAILED_TO_APPROVE_REVIEW = No se ha podido aprobar la revisi\u00f3n de la reclamaci\u00f3n
-CLAIM_FAILED_TO_APPROVE_MODERATION = Error al aprobar la la moderaci\u00f3n a la reclamaci\u00f3n
-CLAIM_FAILED_TO_WITHDRAW = Error al retirar la reclamaci\u00f3n
-CLAIM_FAILED_TO_SAVE_COMMENT = Error al guardar el comentario de la reclamaci\u00f3n
-CLAIM_FAILED_TO_DELETE_COMMENT = Error al borrar comentarios
-CLAIM_FAILED_TO_DELETE_ATTACHMENT = Fallo la eliminaci\u00f3n del archivo adjunto
-CLAIM_EDIT_NOT_ALLOWED = Reclamaci\u00f3n no se puede editar. Aseg\u00farese de que tiene derechos suficientes y el estado de la reclamaci\u00f3n es apropiado
-CLAIM_FAILED_TO_SAVE = Error al guardar el reclamo
-CLAIM_TYPE_REQUIRED = Se requiere un tipo de reclamaci\u00f3n
-CLAIM_CLAIMANT_REQUIRED = Se requiere un demandante
-CLAIM_LAND_USE_REQUIRED = Se requiere el uso de la tierra
-CLAIM_MAPPED_GEOMETRY_REQUIRED = Se requiere la Geometr\u00eda
-CLAIM_CHALLENGED_CLAIM_NOT_FOUND = No se ha encontrado la impugnaci\u00f3n del reclamo
-CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED = Reclamaci\u00f3n impugnada no puede ser cuestionada. Comprobar el estado de reclamaci\u00f3n
-CLAIM_OWNER_NAME_REQUIRED = Se requiere el nombre del propietario
-CLAIM_CLAIMANT_NAME_REQUIRED = Se requiere el nombre del demandante
-CLAIM_OWNER_TYPE_REQUIRED = Se requiere el nombre del propietario
-CLAIM_CLAIMANT_TYPE_REQUIRED = Se requiere el tipo de demandante
-CLAIM_CLAIMANT_GENDER_REQUIERD = Se requiere el genero
-CLAIM_SHARE_DENOMINATOR_REQUIRED = Se requiere la acci\u00f3n del denominador
-CLAIM_SHARE_NUMERATOR_REQUIRED = Se requiere la acci\u00f3n del numerador
-CLAIM_SHARES_REQUIRED = Se requiere al menos una acci\u00f3n
-CLAIM_SHARE_OWNER_REQUIRED = Todas las acciones deben tener al menos un propietario All shares must have at least 1 owner
-CLAIM_SHARE_TOTAL_SHARE_WRONG = El n\u00famero total de accions debe ser de 100% 
-CLAIM_SHARE_ZERO_NUMERATOR = El numerador no puede ser 0 o menos que 0 
-CLAIM_SHARE_ZERO_DENOMINATOR = El denominador no puede ser 0 o menos que 0 
-CLAIM_REJECTION_REASON_REQUIRED = Se requiere un motivo de rechazo
-CLAIM_FAILED_TO_SUBMIT = Error al enviar el reclamo 
-CLAIM_NOT_FOUND = No se encuentra el reclamo
+CLAIM_FAILED_TO_DELETE = Fall\u00f3 al eliminar la reclamaci\u00f3n
+CLAIM_FAILED_TO_ASSIGN = Fall\u00f3 al asignar la reclamaci\u00f3n
+CLAIM_FAILED_TO_UNASSIGN = Fall\u00f3 al desasignar la reclamaci\u00f3n
+CLAIM_FAILED_TO_REJECT = Fall\u00f3 al rechazar la reclamaci\u00f3n
+CLAIM_FAILED_TO_APPROVE_REVIEW = Fall\u00f3 al aprobar la revisi\u00f3n de la reclamaci\u00f3n
+CLAIM_FAILED_TO_APPROVE_MODERATION = Fall\u00f3 al aprobar la moderaci\u00f3n de la reclamaci\u00f3n
+CLAIM_FAILED_TO_WITHDRAW = Fall\u00f3 al retirar la reclamaci\u00f3n
+CLAIM_FAILED_TO_SAVE_COMMENT = Fall\u00f3 al guardar el comentario de la reclamaci\u00f3n
+CLAIM_FAILED_TO_DELETE_COMMENT = Fall\u00f3 al eliminar el comentario
+CLAIM_FAILED_TO_DELETE_ATTACHMENT = Fall\u00f3 al eliminar el archivo adjunto
+CLAIM_EDIT_NOT_ALLOWED = No se puede editar la reclamaci\u00f3n. Aseg\u00farate de tener derechos suficientes y que el estado de la reclamaci\u00f3n sea adecuado
+CLAIM_FAILED_TO_SAVE = Fall\u00f3 al guardar la reclamaci\u00f3n
+CLAIM_TYPE_REQUIRED = Se requiere el tipo de reclamaci\u00f3n
+CLAIM_CHALLENGE_EXPIRATION_DATE_REQUIRED = Se requiere la fecha de expiraci\u00f3n del situacion a resolver
+CLAIM_CLAIMANT_REQUIRED = Se requiere el reclamante
+CLAIM_LAND_USE_REQUIRED = Se requiere el uso de la predio/parcela
+CLAIM_MAPPED_GEOMETRY_REQUIRED = Se requiere la geometr\u00eda
+CLAIM_CHALLENGED_CLAIM_NOT_FOUND = No se encontr\u00f3 la reclamaci\u00f3n impugnada
+CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED = La reclamaci\u00f3n situacion a resolver no puede ser situacion a resolver. Verifique el estado de la reclamaci\u00f3n
+CLAIM_OWNER_NAME_REQUIRED = Se requiere el nombre del titulare
+CLAIM_CLAIMANT_NAME_REQUIRED = Se requiere el nombre del reclamante
+CLAIM_NAME_REQUIRED = Se requiere el nombre
+CLAIM_OWNER_TYPE_REQUIRED = Se requiere el tipo de titulare
+CLAIM_CLAIMANT_TYPE_REQUIRED = Se requiere el tipo de reclamante
+CLAIM_CLAIMANT_GENDER_REQUIERD = Se requiere el g\u00e9nero
+CLAIM_SHARE_DENOMINATOR_REQUIRED = Se requiere el denominador de la participaci\u00f3n
+CLAIM_SHARE_NUMERATOR_REQUIRED = Se requiere el numerador de la participaci\u00f3n
+CLAIM_SHARES_REQUIRED = Se requiere al menos una participaci\u00f3n
+CLAIM_SHARE_OWNER_REQUIRED = Todas las participaciones deben tener al menos 1 titulare
+CLAIM_SHARE_TOTAL_SHARE_WRONG = Las participaciones totales deben sumar 100%
+CLAIM_SHARE_ZERO_NUMERATOR = El numerador no puede ser 0 o menor a 0
+CLAIM_SHARE_ZERO_DENOMINATOR = El denominador no puede ser 0 o menor a 0
+CLAIM_SHARE_PERCENTAGE_REQUIRED = Se requiere el porcentaje de participaci\u00f3n
+CLAIM_SHARE_PERCENTAGE_ZERO = El porcentaje de participaci\u00f3n debe ser mayor a 0
+CLAIM_REJECTION_REASON_REQUIRED = Se requiere motivo de rechazo
+CLAIM_FAILED_TO_SUBMIT = Fallo al enviar la reclamaci\u00f3n
+CLAIM_NOT_FOUND = Reclamaci\u00f3n no encontrada
+CLAIM_TRANSFER_NOT_ALLOWED = La reclamaci\u00f3n no puede ser transferida. Aseg\u00farate de tener derechos suficientes y que el estado de la reclamaci\u00f3n sea adecuado
+CLAIM_MANAGE_MORTGAGES_ALLOWED = La gesti\u00f3n de pr\u00e9stamos/hipotecas no est\u00e1 permitida. Aseg\u00farate de tener derechos suficientes y que el estado de la reclamaci\u00f3n sea adecuado
+CLAIM_PROJECT_MISMATCH = El proyecto de la reclamaci\u00f3n no coincide con el proyecto actual.
 
-# Attachment
+# Adjuntos
 ATTACHMENT_SELECT_DOOCUMENT_TYPE = Seleccione el tipo de documento
 ATTACHMENT_SELECT_FILE = Seleccione el archivo a adjuntar
-ATTACHMENT_BAD_DOC_DATE = Fecha erronea del documento
-ATTACHMENT_FAILED_TO_ATTACH = No se pudo adjuntar el documento
+ATTACHMENT_BAD_DOC_DATE = Fecha de documento incorrecta
+ATTACHMENT_FAILED_TO_ATTACH = Fallo al adjuntar el documento
 
-# Password restore
-PASSWORD_RESTORE_RESTORE_CODE_NOT_FOUND = No se encontro el c\u00f3digo de recuperaci\u00f3n de la contrase\u00f1a
-PASSWORD_RESTORE_ACCOUNT_LOCKED = Su cuenta esta bloqueada y su contrase\u00f1a no puede ser recuperada.
-PASSWORD_RESTORE_EMAIL_NOT_FOUND = La cuenta de usuario de la direcci\u00f3n de correo proporcionada no se consigui\u00f3. 
+# Restauraci\u00f3n de contrase\u00f1a
+PASSWORD_RESTORE_RESTORE_CODE_NOT_FOUND = C\u00f3digo de restauraci\u00f3n de contrase\u00f1a no encontrado
+PASSWORD_RESTORE_ACCOUNT_LOCKED = Su cuenta est\u00e1 bloqueada y la contrase\u00f1a no puede ser restaurada.
+PASSWORD_RESTORE_EMAIL_NOT_FOUND = Cuenta de usuario con la direcci\u00f3n de correo proporcionada no encontrada.
 
-# Claim upload
-CLAIM_UPLOAD_FILE_REQUIERD = Se requiere un archivo en formato .zip. 
-CLAIM_UPLOAD_BAD_FOLDER_STRUCTURE = Incorrecta estructura de la carpeta de reclamos. 
-CLAIM_UPLOAD_JSON_NOT_FOUND =  No se encuentra el archivo Json
-CLAIM_UPLOAD_ATTACHMENT_NOT_FOUND = No se encontro el archivo "%s" adjunto.
-CLAIM_UPLOAD_ZIP_EXTRACTION_FAILED = Failed to extract files from archive. Make sure archive is not broken. If file is protected with password, make sure you have provided correct password. 
+# Subida de reclamaciones
+CLAIM_UPLOAD_FILE_REQUIERD = Se requiere el archivo zip de la reclamaci\u00f3n.
+CLAIM_UPLOAD_BAD_FOLDER_STRUCTURE = Estructura de carpetas de reclamaci\u00f3n incorrecta.
+CLAIM_UPLOAD_JSON_NOT_FOUND = Archivo JSON no encontrado.
+CLAIM_UPLOAD_ATTACHMENT_NOT_FOUND = Archivo adjunto "%s" no encontrado.
+CLAIM_UPLOAD_ZIP_EXTRACTION_FAILED = Fallo al extraer archivos del archivo. Aseg\u00farese de que el archivo no est\u00e9 da\u00f1ado. Si el archivo est\u00e1 protegido con contrase\u00f1a, aseg\u00farese de haber proporcionado la contrase\u00f1a correcta.
 
-# Map control
-MAP_CONTROL_BAD_FEATURE_STRUCTURE = Mala estructura de las funciones
-MAP_CONTROL_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Proporcione una descripci\u00f3n de la localizaci\u00f3n adicional 
-MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = Debe proporcionarse la geometr\u00eda de reclamo
-MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = La geometr\u00eda de reclamo debe ser una sola, no multiple.
-MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Se requiere descripci\u00f3n adicional de la ubicaci\u00f3n. 
+# Control del mapa
+MAP_CONTROL_BAD_FEATURE_STRUCTURE = Estructura de caracter\u00edstica incorrecta
+MAP_CONTROL_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Proporcione una descripci\u00f3n de la ubicaci\u00f3n adicional
+MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = Se debe proporcionar la geometr\u00eda de la reclamaci\u00f3n
+MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = La geometr\u00eda de la reclamaci\u00f3n debe ser solo una, no varias
+MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Se requiere una descripci\u00f3n de ubicaci\u00f3n adicional
+MAP_CONTROL_BOUNDARY_GEOMETRY_MUST_BE_ONE = La geometr\u00eda del l\u00edmite debe ser solo una, no varias
+MAP_CONTROL_PARCEL_NOT_POLYGON = Proporcione un pol\u00edgono
+MAP_CONTROL_PARCEL_3POINT_MIN = Proporcione al menos 3 puntos
 
-# Dynamic forms
-FORMS_PAGE_FORM_HAS_PAYLOAD = Plantilla de formulario no se puede eliminar porque esta relacionada con registros de reclamaciones.
-FORMS_PAGE_FILL_NAME = - Coloque el nombre
-FORMS_PAGE_FILL_DISPLAY_NAME = - Escriba el nombre a mostrar
+# Formularios din\u00e1micos
+FORMS_PAGE_FORM_HAS_PAYLOAD = La plantilla de formulario no se puede eliminar porque tiene registros de reclamaci\u00f3n relacionados.
+FORMS_PAGE_FILL_NAME = - Complete el nombre
+FORMS_PAGE_FILL_DISPLAY_NAME = - Complete el nombre de visualizaci\u00f3n
 FORMS_PAGE_FILL_ELEMENT_NAME = - Complete el nombre del elemento
-FORMS_PAGE_FILL_ELEMENT_DISPLAY_NAME = - Complete el nombre del elemento a mostrar
+FORMS_PAGE_FILL_ELEMENT_DISPLAY_NAME = - Complete el nombre de visualizaci\u00f3n del elemento
 FORMS_PAGE_FILL_ERROR_MESSAGE = - Complete el mensaje de error
-FORMS_PAGE_MIN_OCCUR_GRATER_MAX_OCCUR = - Ocurrencia m\u00ednima no debe ser mayor que la m\u00e1xima ocurrencia
-FORMS_PAGE_FILL_HINT = - Escriba su sugerencia
+FORMS_PAGE_MIN_OCCUR_GRATER_MAX_OCCUR = - La ocurrencia m\u00ednima no debe ser mayor que la ocurrencia m\u00e1xima
+FORMS_PAGE_FILL_HINT = - Complete la sugerencia
 FORMS_PAGE_SELECT_FIELD_TYPE = - Seleccione el tipo de campo
-FORMS_PAGE_SELECT_FIELD_CONSTRAINT_TYPE = - Seleccione el tipo de campo de restricci\u00f3n
-FORMS_PAGE_FILL_FORM_NAME_AND_DISPLAY_NAME = Escriba el nombre de la forma y el nombre de visualizaci\u00f3n
-FORMS_PAGE_ADD_1_SECTION = Agregue al menos una secci\u00f3n 
-FORMS_PAGE_ADD_1_FIELD = Agregue al menos una campo en la secci\u00f3n %s
+FORMS_PAGE_SELECT_FIELD_CONSTRAINT_TYPE = - Seleccione el tipo de restricci\u00f3n del campo
+FORMS_PAGE_FILL_FORM_NAME_AND_DISPLAY_NAME = Complete el nombre del formulario y el nombre de visualizaci\u00f3n
+FORMS_PAGE_ADD_1_SECTION = Agregue al menos 1 secci\u00f3n
+FORMS_PAGE_ADD_1_FIELD = Agregue al menos 1 campo en la secci\u00f3n %s
+
+# Informes
+REPORTS_FAILED_AUTHENTICATE = Fallo al autenticar. C\u00f3digo de error HTTP: %s
+REPORTS_FAILED_TO_GET_REPORTS = Fallo al obtener la lista de informes. C\u00f3digo de error HTTP: %s
+REPORTS_FAILED_TO_GET_RESOURCE = Fallo al obtener el recurso. C\u00f3digo de error HTTP: %s
+REPORTS_FAILED_TO_GET_REPORT = Fallo al obtener el informe. C\u00f3digo de error HTTP: %s
+REPORTS_FAILED_TO_GET_PARAMS = Fallo al obtener la lista de par\u00e1metros del informe. C\u00f3digo de error HTTP: %s
+REPORTS_FILL_IN_PARAM = Complete "%s"
+REPORTS_PARAM_IS_NOT_DATE = El par\u00e1metro "%s" no es una fecha v\u00e1lida
+REPORTS_PARAM_IS_NOT_NUMBER = El par\u00e1metro "%s" no es un n\u00famero v\u00e1lido
+REPORT_NOT_FOUND = Informe solicitado no encontrado.
+REPORTS_FOLDER_PATH_IS_NULL = El par\u00e1metro de la ruta de la carpeta de informes no est\u00e1 configurado.
+
+# Mortgages
+MORTGAGE_START_DATE = Ingrese la fecha de inicio del pago
+MORTGAGE_END_DATE = Ingrese la fecha de finalizaci\u00f3n
+MORTGAGE_AMOUNT = Ingrese el monto
+MORTGAGE_INTEREST_RATE = Tasa de inter\u00e9s
+MORTGAGE_START_DATE_LESS_END_DATE = La fecha de inicio del pago debe ser menor que la fecha de finalizaci\u00f3n
+MORTGAGE_LENDERS = Agregue al menos un prestamista
+
+# Claims split/merge
+CLAIM_ALREADY_IN_LIST = La reclamaci\u00f3n ya fue agregada a la lista
+CLAIM_MUST_BE_MODERATED = La reclamaci\u00f3n seleccionada debe tener el estado Moderado
+CLAIM_HAS_RESTRICTIONS = La reclamaci\u00f3n seleccionada tiene restricciones registradas. Deben ser terminadas primero.
+TRANSACTION_HAS_BEEN_COMPLETED = La transacci\u00f3n ya ha sido completada.
+CLAIMS_MERGE_COUNT = Para fusionar reclamaciones, debe haber al menos 2 reclamaciones para fusionar y 1 nueva reclamaci\u00f3n como resultado de la fusi\u00f3n.
+CLAIM_SPLIT_COUNT = Para dividir reclamaciones, debe haber 1 reclamaci\u00f3n para dividir y al menos 2 nuevas reclamaciones como resultado de la divisi\u00f3n.
+
+# Administrative boundaries
+BOUNDARY_EDIT_NOT_ALLOWED = No se puede editar el l\u00edmite. Aseg\u00farate de tener derechos suficientes y que el estado del l\u00edmite sea adecuado.
