--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_fr_FR.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_fr_FR.properties
@@ -1,99 +1,157 @@
 # General
-GENERAL_ERROR_LIST_HEADER = Le formulaire de soumission n'est pas correct. Merci de revoir et de corriger les erreurs list\u00e9es:
-GENERAL_UNEXPECTED_ERROR = Une erreur inattendue s'est produite pendant l'ex\u00e9cution de l'action.
+GENERAL_ERROR_LIST_HEADER = La soumission du formulaire n'a pas \u00e9t\u00e9 r\u00e9ussie. Veuillez v\u00e9rifier et corriger les erreurs list\u00e9es :
+GENERAL_UNEXPECTED_ERROR = Des erreurs inattendues se sont produites lors de l'ex\u00e9cution de l'action demand\u00e9e
+GENERAL_REDIRECT_FAILED = \u00c9chec de la redirection
+GENERAL_INSUFFICIENT_RIGHTS = Vous n'avez pas les droits pour acc\u00e9der \u00e0 cette page
+GENERAL_NO_ACCESS_TO_SERVER = Vous n'avez pas les droits pour acc\u00e9der au serveur
+GENERAL_NO_ACCESS_TO_PROJECTS = Vous n'avez acc\u00e8s \u00e0 aucun des projets
 
 # Login errors
-LOGIN_USERNAME_REQUIRED = Remplir le nom d'utilisateur
-LOGIN_PASSWORD_REQUIRED = Remplir le mot de passe
-LOGIN_FAILED = La connexion a \u00e9chou\u00e9
-LOGIN_LOGOUT_FAILED = La d\u00e9connexion a \u00e9chou\u00e9
-LOGIN_ACCOUNT_BLOCKED = Votre compte n'est pas activ\u00e9. Si vous venez de vous inscrire, il faut devez d'abord activer votre compte.
+LOGIN_USERNAME_REQUIRED = Fournissez un nom d'utilisateur
+LOGIN_PASSWORD_REQUIRED = Fournissez un mot de passe
+LOGIN_FAILED = \u00c9chec de la connexion
+LOGIN_LOGOUT_FAILED = \u00c9chec de la d\u00e9connexion
+LOGIN_ACCOUNT_BLOCKED = Votre compte n'est pas actif. Si vous venez de vous inscrire, vous devez d'abord l'activer.
+PROJECT_REQUIRED = S\u00e9lectionnez un projet
 
 # User registration errors
-USER_REGISTRATION_PASSWORD_CONFIRMATION_REQUIRED = Confirmer votre mot de passe
-USER_REGISTRATION_WRONG_CAPTCHA = La valeur du captcha entr\u00e9e ne correspond pas \u00e0 l'image
-USER_REGISTRATION_CAPTCHA_REQUIRED = Remplir la valeur du captcha
-USER_REGISTRATION_FIRSTNAME_REQUIRED = Remplir le pr\u00e9nom
-USER_REGISTRATION_LASTNAME_REQUIRED = Remplir le nom
-USER_REGISTRATION_EMAIL_REQUIRED = Remplir l'email
-USER_REGISTRATION_MOBILE_REQUIRED = Remplir le num\u00e9ro de t\u00e9l\u00e9phone mobile
-USER_REGISTRATION_USERNAME_LENGTH = La taille du nom d'utilisateur doit \u00eatre entre 3 et 20 caract\u00e8res.
-USER_REGISTRATION_BAD_EMAIL = L'adresse email a un format incorrect.
-USER_REGISTRATION_BAD_MOBILE = Le num\u00e9ro de t\u00e9l\u00e9phone mobile a un format incorrect.
-USER_REGISTRATION_PASSWORDS_MISMATCH = Le mot de passe et le mot de passe de confirmation ne correspondent pas.
-USER_REGISTRATION_USER_EXISTS = Le nom d'utilisateur existe d\u00e9j\u00e0.
-USER_REGISTRATION_EMAIL_EXISTS = L'adresse email existe d\u00e9j\u00e0.
+USER_REGISTRATION_PASSWORD_CONFIRMATION_REQUIRED = Fournissez la confirmation du mot de passe
+USER_REGISTRATION_WRONG_CAPTCHA = La valeur du captcha saisie ne correspond pas \u00e0 l'image
+USER_REGISTRATION_CAPTCHA_REQUIRED = Fournissez la valeur du captcha
+USER_REGISTRATION_FIRSTNAME_REQUIRED = Fournissez le pr\u00e9nom
+USER_REGISTRATION_LASTNAME_REQUIRED = Fournissez le nom de famille
+USER_REGISTRATION_EMAIL_REQUIRED = Fournissez l'email
+USER_REGISTRATION_MOBILE_REQUIRED = Fournissez le num\u00e9ro de t\u00e9l\u00e9phone mobile
+USER_REGISTRATION_USERNAME_LENGTH = La longueur du nom d'utilisateur doit \u00eatre comprise entre 3 et 20 caract\u00e8res
+USER_REGISTRATION_BAD_EMAIL = L'adresse e-mail fournie est dans un format incorrect
+USER_REGISTRATION_BAD_MOBILE = Le num\u00e9ro de mobile fourni est dans un format incorrect
+USER_REGISTRATION_PASSWORDS_MISMATCH = Le mot de passe et la confirmation du mot de passe ne correspondent pas
+USER_REGISTRATION_USER_EXISTS = Le nom d'utilisateur fourni existe d\u00e9j\u00e0
+USER_REGISTRATION_EMAIL_EXISTS = L'adresse e-mail fournie existe d\u00e9j\u00e0
 
 # User activation errors
-USER_ACTIVATION_CODE_REQUIRED = Remplir le code d'activation
-USER_ACTIVATION_BAD_CODE = Le code d'activation ne correspond pas au nom d'utilisateur
-USER_ACTIVATION_ACTIVATION_FAILED = L'activation a \u00e9chou\u00e9. Merci de v\u00e9rifier le code d'activation et/ou le nom d'utilisateur.
+USER_ACTIVATION_CODE_REQUIRED = Fournissez le code d'activation
+USER_ACTIVATION_BAD_CODE = Le code d'activation fourni ne correspond pas au nom d'utilisateur fourni
+USER_ACTIVATION_ACTIVATION_FAILED = \u00c9chec de l'activation. Veuillez v\u00e9rifier le code d'activation et/ou le nom d'utilisateur.
 
 # Profile page
-PROFILE_CURRENT_PASSWORD_REQUIRED = Remplir le mot de passe actuel
-PROFILE_NEW_PASSWORD_REQUIRED = Remplir le nouveau mot de passe
-PROFILE_BAD_OLD_PASSWORD = Le mot de passe actuel est incorrect
-PROFILE_FAILED_CHANGE_PASSWORD = Le changement de mot de passe a \u00e9chou\u00e9
+PROFILE_CURRENT_PASSWORD_REQUIRED = Fournissez le mot de passe actuel
+PROFILE_NEW_PASSWORD_REQUIRED = Fournissez le nouveau mot de passe
+PROFILE_BAD_OLD_PASSWORD = Le mot de passe actuel est incorrect.
+PROFILE_FAILED_CHANGE_PASSWORD = \u00c9chec de la modification du mot de passe.
 
 # Claim
-CLAIM_FAILED_TO_DELETE = La suppression de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_ASSIGN = L'assignation de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_UNASSIGN = Le retrait de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_REJECT = Le rejet de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_APPROVE_REVIEW = L'approbation de la revue de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_APPROVE_MODERATION = L'approbation de la mod\u00e9raiton de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_WITHDRAW = La renonciation de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_SAVE_COMMENT = La sauvegarde du commentaire de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_FAILED_TO_DELETE_COMMENT = La suppression du commentaire a \u00e9chou\u00e9
-CLAIM_FAILED_TO_DELETE_ATTACHMENT = La suppression de l'attachement a \u00e9chou\u00e9
-CLAIM_EDIT_NOT_ALLOWED = La d\u00e9claration ne peut pas \u00eatre \u00e9dit\u00e9e. Assurez-vous d'avoir les droits suffisants et un statut de d\u00e9claration appropri\u00e9
-CLAIM_FAILED_TO_SAVE = La sauvegarde de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_TYPE_REQUIRED = Le type de d\u00e9claration est requis
-CLAIM_CLAIMANT_REQUIRED = Le d\u00e9clarant est requis
-CLAIM_LAND_USE_REQUIRED = L'utilisation du sol est requise
+CLAIM_FAILED_TO_DELETE = \u00c9chec de la suppression de la r\u00e9clamation
+CLAIM_FAILED_TO_ASSIGN = \u00c9chec de l'attribution de la r\u00e9clamation
+CLAIM_FAILED_TO_UNASSIGN = \u00c9chec de la d\u00e9sattribution de la r\u00e9clamation
+CLAIM_FAILED_TO_REJECT = \u00c9chec du rejet de la r\u00e9clamation
+CLAIM_FAILED_TO_APPROVE_REVIEW = \u00c9chec de l'approbation de l'examen de la r\u00e9clamation
+CLAIM_FAILED_TO_APPROVE_MODERATION = \u00c9chec de l'approbation de la mod\u00e9ration de la r\u00e9clamation
+CLAIM_FAILED_TO_WITHDRAW = \u00c9chec du retrait de la r\u00e9clamation
+CLAIM_FAILED_TO_SAVE_COMMENT = \u00c9chec de l'enregistrement du commentaire de la r\u00e9clamation
+CLAIM_FAILED_TO_DELETE_COMMENT = \u00c9chec de la suppression du commentaire
+CLAIM_FAILED_TO_DELETE_ATTACHMENT = \u00c9chec de la suppression de la pi\u00e8ce jointe
+CLAIM_EDIT_NOT_ALLOWED = La r\u00e9clamation ne peut pas \u00eatre modifi\u00e9e. Assurez-vous d'avoir des droits suffisants et que le statut de la r\u00e9clamation est appropri\u00e9
+CLAIM_FAILED_TO_SAVE = \u00c9chec de l'enregistrement de la r\u00e9clamation
+CLAIM_TYPE_REQUIRED = Le type de r\u00e9clamation est requis
+CLAIM_CHALLENGE_EXPIRATION_DATE_REQUIRED = La date d'expiration du d\u00e9fi est requise
+CLAIM_CLAIMANT_REQUIRED = Le demandeur est requis
+CLAIM_LAND_USE_REQUIRED = L'utilisation des terres est requise
 CLAIM_MAPPED_GEOMETRY_REQUIRED = La g\u00e9om\u00e9trie est requise
-CLAIM_CHALLENGED_CLAIM_NOT_FOUND = La d\u00e9claration contest\u00e9e n'a pas \u00e9t\u00e9 trouv\u00e9e
-CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED = La d\u00e9claration contest\u00e9e ne peut pas \u00eatre contest\u00e9e. V\u00e9rifier le statut de la d\u00e9claration.
-CLAIM_OWNER_NAME_REQUIRED = Le nom du propri\u00e9taire est requis
-CLAIM_CLAIMANT_NAME_REQUIRED = Le nom du d\u00e9clarant est requis
-CLAIM_OWNER_TYPE_REQUIRED = Le type de propri\u00e9taire est requis
-CLAIM_CLAIMANT_TYPE_REQUIRED = Le type de d\u00e9clarant est requis
+CLAIM_CHALLENGED_CLAIM_NOT_FOUND = La r\u00e9clamation contest\u00e9e n'a pas \u00e9t\u00e9 trouv\u00e9e
+CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED = La r\u00e9clamation contest\u00e9e ne peut pas \u00eatre contest\u00e9e. V\u00e9rifiez l'\u00e9tat de la r\u00e9clamation
+CLAIM_OWNER_NAME_REQUIRED = Le nom du D\u00e9tenteur est requis
+CLAIM_CLAIMANT_NAME_REQUIRED = Le nom du demandeur est requis
+CLAIM_NAME_REQUIRED = Le nom est requis
+CLAIM_OWNER_TYPE_REQUIRED = Le type de D\u00e9tenteur est requis
+CLAIM_CLAIMANT_TYPE_REQUIRED = Le type de demandeur est requis
 CLAIM_CLAIMANT_GENDER_REQUIERD = Le genre est requis
 CLAIM_SHARE_DENOMINATOR_REQUIRED = Le d\u00e9nominateur de la part est requis
 CLAIM_SHARE_NUMERATOR_REQUIRED = Le num\u00e9rateur de la part est requis
 CLAIM_SHARES_REQUIRED = Au moins une part est requise
-CLAIM_SHARE_OWNER_REQUIRED = Toutes les parts doivent avoir au moins une part
-CLAIM_SHARE_TOTAL_SHARE_WRONG = Le toal des parts doit \u00eatre \u00e9gal \u00e0 100%
-CLAIM_SHARE_ZERO_NUMERATOR = Le num\u00e9rateur ne peut pas \u00eatre 0 ou n\u00e9gatif
-CLAIM_SHARE_ZERO_DENOMINATOR = Le d\u00e9nominateur ne peut pas \u00eatre 0 ou n\u00e9gatif
-CLAIM_REJECTION_REASON_REQUIRED = La raison de la r\u00e9jection est requise
-CLAIM_FAILED_TO_SUBMIT = La soumission de la d\u00e9claration a \u00e9chou\u00e9
-CLAIM_NOT_FOUND = D\u00e9claration non trouv\u00e9e
+CLAIM_SHARE_OWNER_REQUIRED = Toutes les parts doivent avoir au moins un D\u00e9tenteur
+CLAIM_SHARE_TOTAL_SHARE_WRONG = Le total des parts doit atteindre 100 %
+CLAIM_SHARE_ZERO_NUMERATOR = Le num\u00e9rateur ne peut pas \u00eatre 0 ou inf\u00e9rieur \u00e0 0
+CLAIM_SHARE_ZERO_DENOMINATOR = Le d\u00e9nominateur ne peut pas \u00eatre 0 ou inf\u00e9rieur \u00e0 0
+CLAIM_SHARE_PERCENTAGE_REQUIRED = Le pourcentage de la part est requis
+CLAIM_SHARE_PERCENTAGE_ZERO = Le pourcentage de la part doit \u00eatre sup\u00e9rieur \u00e0 0
+CLAIM_REJECTION_REASON_REQUIRED = La raison du rejet est requise
+CLAIM_FAILED_TO_SUBMIT = \u00c9chec de la soumission de la r\u00e9clamation
+CLAIM_NOT_FOUND = R\u00e9clamation introuvable
+CLAIM_TRANSFER_NOT_ALLOWED = La r\u00e9clamation ne peut pas \u00eatre transf\u00e9r\u00e9e. Assurez-vous que vous disposez des droits suffisants et que l'\u00e9tat de la r\u00e9clamation est appropri\u00e9
+CLAIM_MANAGE_MORTGAGES_ALLOWED = La gestion des pr\u00eats / hypoth\u00e8ques n'est pas autoris\u00e9e. Assurez-vous que vous disposez des droits suffisants et que l'\u00e9tat de la r\u00e9clamation est appropri\u00e9
+CLAIM_PROJECT_MISMATCH = Le projet de la r\u00e9clamation ne correspond pas au projet actuel
 
 # Attachment
-ATTACHMENT_SELECT_DOOCUMENT_TYPE = S\u00e9lectionner le type de document
-ATTACHMENT_SELECT_FILE = S\u00e9lectionner le fichier \u00e0 attacher
-ATTACHMENT_BAD_DOC_DATE = La date du document est fausse
-ATTACHMENT_FAILED_TO_ATTACH = L'attachement du document a \u00e9chou\u00e9
+ATTACHMENT_SELECT_DOOCUMENT_TYPE = S\u00e9lectionnez le type de document
+ATTACHMENT_SELECT_FILE = S\u00e9lectionnez le fichier \u00e0 joindre
+ATTACHMENT_BAD_DOC_DATE = Date de document incorrecte
+ATTACHMENT_FAILED_TO_ATTACH = \u00c9chec de l'attachement du document
 
 # Password restore
-PASSWORD_RESTORE_RESTORE_CODE_NOT_FOUND = Le mot de passe de restoration n'a pas \u00e9t\u00e9 trouv\u00e9
-PASSWORD_RESTORE_ACCOUNT_LOCKED = Votre compte est bloqu\u00e9 et votre mot de passe ne peut pas \u00eatre restor\u00e9.
-PASSWORD_RESTORE_EMAIL_NOT_FOUND = Le compte utilisateur correspondant \u00e0 l'email fourni n'a pas \u00e9t\u00e9 trouv\u00e9.
+PASSWORD_RESTORE_RESTORE_CODE_NOT_FOUND = Code de restauration de mot de passe introuvable
+PASSWORD_RESTORE_ACCOUNT_LOCKED = Votre compte est verrouill\u00e9 et le mot de passe ne peut pas \u00eatre restaur\u00e9.
+PASSWORD_RESTORE_EMAIL_NOT_FOUND = Compte utilisateur avec l'adresse email donn\u00e9e introuvable.
 
 # Claim upload
-CLAIM_UPLOAD_FILE_REQUIERD = Le fichier zip de la d\u00e9claration est requis. 
-CLAIM_UPLOAD_BAD_FOLDER_STRUCTURE = La structure du dossier des d\u00e9clarations est incorrect. 
-CLAIM_UPLOAD_JSON_NOT_FOUND =  Fichier Json non trouv\u00e9.
-CLAIM_UPLOAD_ATTACHMENT_NOT_FOUND = Fichier attach\u00e9 "%s" non trouv\u00e9.
-CLAIM_UPLOAD_ZIP_EXTRACTION_FAILED = L'extraction de fichiers des archives a \u00e9chou\u00e9. Assurez-vous que les archives ne sont pas fragment\u00e9es. Si le fichier est prot\u00e9g\u00e9 pas un mot de passe, assurez-vous d'avoir bien rempli le mot de passe. 
+CLAIM_UPLOAD_FILE_REQUIERD = Le fichier zip de la r\u00e9clamation est requis.
+CLAIM_UPLOAD_BAD_FOLDER_STRUCTURE = Structure de dossier de r\u00e9clamation incorrecte.
+CLAIM_UPLOAD_JSON_NOT_FOUND = Fichier JSON introuvable.
+CLAIM_UPLOAD_ATTACHMENT_NOT_FOUND = Fichier joint "%s" introuvable.
+CLAIM_UPLOAD_ZIP_EXTRACTION_FAILED = \u00c9chec de l'extraction des fichiers de l'archive. Assurez-vous que l'archive n'est pas endommag\u00e9e. Si le fichier est prot\u00e9g\u00e9 par un mot de passe, assurez-vous que vous avez fourni le mot de passe correct.
 
 # Map control
-MAP_CONTROL_BAD_FEATURE_STRUCTURE = Muavaise structure d'\u00e9l\u00e9ment
-MAP_CONTROL_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Fournir une description \u00e0 la localisation additionnelle
-MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = La g\u00e9om\u00e9trie de la d\u00e9claration doir \u00eatre remplie
-MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = La g\u00e9om\u00e9trie de la d\u00e9claration est unique, pas multiple
-MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Description de localisation additionelle requise
+MAP_CONTROL_BAD_FEATURE_STRUCTURE = Structure de fonctionnalit\u00e9 incorrecte
+MAP_CONTROL_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Fournissez une description pour l'emplacement suppl\u00e9mentaire
+MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = La g\u00e9om\u00e9trie de la r\u00e9clamation doit \u00eatre fournie
+MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = La g\u00e9om\u00e9trie de la r\u00e9clamation doit \u00eatre unique, pas multiple
+MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Description de l'emplacement suppl\u00e9mentaire requise
+MAP_CONTROL_BOUNDARY_GEOMETRY_MUST_BE_ONE = La g\u00e9om\u00e9trie de la limite doit \u00eatre unique, pas multiple
+MAP_CONTROL_PARCEL_NOT_POLYGON = Fournissez un polygone
+MAP_CONTROL_PARCEL_3POINT_MIN = Fournissez au moins 3 points
 
 # Dynamic forms
-FORMS_PAGE_FORM_HAS_PAYLOAD = Le formulaire type ne peut pas \u00eatre supprim\u00e9 car des d\u00e9clarations enregistr\u00e9es y sont rattach\u00e9es.
+FORMS_PAGE_FORM_HAS_PAYLOAD = Le mod\u00e8le de formulaire ne peut pas \u00eatre supprim\u00e9 car il a des enregistrements de r\u00e9clamation associ\u00e9s.
+FORMS_PAGE_FILL_NAME = - Remplissez le nom
+FORMS_PAGE_FILL_DISPLAY_NAME = - Remplissez le nom d'affichage
+FORMS_PAGE_FILL_ELEMENT_NAME = - Remplissez le nom de l'\u00e9l\u00e9ment
+FORMS_PAGE_FILL_ELEMENT_DISPLAY_NAME = - Remplissez le nom d'affichage de l'\u00e9l\u00e9ment
+FORMS_PAGE_FILL_ERROR_MESSAGE = - Remplissez le message d'erreur
+FORMS_PAGE_MIN_OCCUR_GRATER_MAX_OCCUR = - L'occurrence minimale ne doit pas \u00eatre sup\u00e9rieure \u00e0 l'occurrence maximale
+FORMS_PAGE_FILL_HINT = - Remplissez l'indice
+FORMS_PAGE_SELECT_FIELD_TYPE = - S\u00e9lectionnez le type de champ
+FORMS_PAGE_SELECT_FIELD_CONSTRAINT_TYPE = - S\u00e9lectionnez le type de contrainte de champ
+FORMS_PAGE_FILL_FORM_NAME_AND_DISPLAY_NAME = Remplissez le nom et le nom d'affichage du formulaire
+FORMS_PAGE_ADD_1_SECTION = Ajoutez au moins 1 section
+FORMS_PAGE_ADD_1_FIELD = Ajoutez au moins 1 champ dans la section %s
+
+# Reports
+REPORTS_FAILED_AUTHENTICATE = \u00c9chec de l'authentification. Code d'erreur HTTP : %s
+REPORTS_FAILED_TO_GET_REPORTS = \u00c9chec de l'obtention de la liste des rapports. Code d'erreur HTTP : %s
+REPORTS_FAILED_TO_GET_RESOURCE = \u00c9chec de l'obtention de la ressource. Code d'erreur HTTP : %s
+REPORTS_FAILED_TO_GET_REPORT = \u00c9chec de l'obtention du rapport. Code d'erreur HTTP : %s
+REPORTS_FAILED_TO_GET_PARAMS = \u00c9chec de l'obtention de la liste des param\u00e8tres de rapport. Code d'erreur HTTP : %s
+REPORTS_FILL_IN_PARAM = Remplissez "%s"
+REPORTS_PARAM_IS_NOT_DATE = Le param\u00e8tre "%s" n'est pas une date valide
+REPORTS_PARAM_IS_NOT_NUMBER = Le param\u00e8tre "%s" n'est pas un nombre valide
+REPORT_NOT_FOUND = Rapport demand\u00e9 introuvable.
+REPORTS_FOLDER_PATH_IS_NULL = Le param\u00e8tre du chemin du dossier des rapports n'est pas configur\u00e9.
+
+# Mortgages
+MORTGAGE_START_DATE = Entrez la date de d\u00e9but du paiement
+MORTGAGE_END_DATE = Entrez la date de fin
+MORTGAGE_AMOUNT = Entrez le montant
+MORTGAGE_INTEREST_RATE = Taux d'int\u00e9r\u00eat
+MORTGAGE_START_DATE_LESS_END_DATE = La date de d\u00e9but du paiement doit \u00eatre inf\u00e9rieure \u00e0 la date de fin
+MORTGAGE_LENDERS = Ajoutez au moins un pr\u00eateur
+
+# Claims split/merge
+CLAIM_ALREADY_IN_LIST = La r\u00e9clamation a d\u00e9j\u00e0 \u00e9t\u00e9 ajout\u00e9e \u00e0 la liste
+CLAIM_MUST_BE_MODERATED = La r\u00e9clamation s\u00e9lectionn\u00e9e doit avoir le statut "Mod\u00e9r\u00e9e"
+CLAIM_HAS_RESTRICTIONS = La r\u00e9clamation s\u00e9lectionn\u00e9e a des restrictions enregistr\u00e9es. Elles doivent \u00eatre termin\u00e9es d'abord.
+TRANSACTION_HAS_BEEN_COMPLETED = La transaction a d\u00e9j\u00e0 \u00e9t\u00e9 compl\u00e9t\u00e9e.
+CLAIMS_MERGE_COUNT = Pour la fusion des r\u00e9clamations, il doit y avoir au moins 2 r\u00e9clamations \u00e0 fusionner et 1 nouvelle r\u00e9clamation en r\u00e9sultat de la fusion.
+CLAIM_SPLIT_COUNT = Pour la division des r\u00e9clamations, il doit y avoir 1 r\u00e9clamation \u00e0 diviser et au moins 2 nouvelles r\u00e9clamations en r\u00e9sultat de la division.
+
+# Administrative boundaries
+BOUNDARY_EDIT_NOT_ALLOWED = La limite ne peut pas \u00eatre modifi\u00e9e. Assurez-vous que vous disposez des droits suffisants et que l'\u00e9tat de la limite est appropri\u00e9.
