--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -76,7 +76,7 @@ MAIN_MENU_SUPPORT = Support
 MAIN_MENU_ADMIN = Administration
 MAIN_MENU_DYNAMIC_FORMS = Dynamic forms
 MAIN_MENU_REPORTS = Reports
-MAIN_MENU_BOUNDARIES = Community Areas
+MAIN_MENU_BOUNDARIES = Community Area internal subdivisions
 MAIN_MENU_LIST = List
 MAIN_MENU_PUBLIC_DISPLAY_MAP = Public Display (Map)
 MAIN_MENU_PUBLIC_DISPLAY_OWNERS = Public Display (Owners)
